--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "rimraf": "2.5.4",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
+    "ts-loader": "^0.8.2",
+    "typescript": "^1.8.10",
     "url-loader": "0.5.7",
     "webpack": "1.13.1",
     "webpack-dev-server": "1.14.1",
