--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "file-loader": "0.9.0",
     "filesize": "3.3.0",
     "fs-extra": "0.30.0",
+    "glslify-loader": "^1.0.2",
     "gzip-size": "3.0.0",
     "html-webpack-plugin": "2.22.0",
     "http-proxy-middleware": "0.17.0",
@@ -39,6 +40,7 @@
     "opn": "4.0.2",
     "postcss-loader": "0.9.1",
     "promise": "7.1.1",
+    "raw-loader": "^0.5.1",
     "recursive-readdir": "2.0.0",
     "rimraf": "2.5.4",
     "strip-ansi": "3.0.1",
@@ -51,8 +53,13 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "glslify-loader": "^1.0.2",
+    "raw-loader": "^0.5.1",
     "react": "^15.3.1",
-    "react-dom": "^15.3.1"
+    "react-dom": "^15.3.1",
+    "voxel-bedrock": "^1.0.1",
+    "voxel-engine-stackgl": "^2.0.0",
+    "voxel-flatland": "^0.1.1"
   },
   "scripts": {
     "start": "node ./scripts/start.js",
