--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "raw-loader": "^0.5.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "stats.js": "^0.16.0",
     "voxel-bedrock": "^1.0.1",
     "voxel-engine-stackgl": "^2.0.0",
     "voxel-flatland": "^0.1.1"
