--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "file-loader": "0.9.0",
     "filesize": "3.3.0",
     "fs-extra": "0.30.0",
-    "glslify-loader": "^1.0.2",
+    "glslify-loader": "pawsong/glslify-loader",
     "gzip-size": "3.0.0",
     "html-webpack-plugin": "2.22.0",
     "http-proxy-middleware": "0.17.0",
@@ -54,9 +54,13 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
-    "glslify-loader": "^1.0.2",
+    "axios": "^0.14.0",
+    "bluebird": "^3.4.5",
+    "msgpack-lite": "^0.1.20",
     "ndarray": "^1.0.18",
+    "pako": "^1.0.3",
     "raw-loader": "^0.5.1",
+    "ray-aabb": "^3.0.2",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "stats.js": "^0.16.0",
