--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "raw-loader": "^0.5.1",
     "recursive-readdir": "2.0.0",
     "rimraf": "2.5.4",
+    "script-loader": "^0.7.0",
     "source-map-loader": "^0.1.5",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
