--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "axios": "^0.14.0",
     "bluebird": "^3.4.5",
+    "material-ui": "^0.15.4",
     "msgpack-lite": "^0.1.20",
     "ndarray": "^1.0.18",
     "pako": "^1.0.3",
@@ -64,6 +65,7 @@
     "ray-aabb": "^3.0.2",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-tap-event-plugin": "^1.0.0",
     "stats.js": "^0.16.0",
     "voxel-bedrock": "^1.0.1",
     "voxel-engine-stackgl": "^2.0.0",
