--- a/package.json
+++ b/package.json
@@ -52,15 +52,24 @@
     "url-loader": "0.5.7",
     "webpack": "1.13.1",
     "webpack-dev-server": "1.14.1",
-    "whatwg-fetch": "1.0.0"
+    "whatwg-fetch": "1.0.0",
+    "worker-loader": "^0.7.1"
   },
   "dependencies": {
     "axios": "^0.14.0",
+    "babel-core": "^6.14.0",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-standalone": "^6.15.0",
     "bluebird": "^3.4.5",
+    "cwise": "^1.0.9",
+    "jszip": "^3.1.2",
     "material-ui": "^0.15.4",
     "msgpack-lite": "^0.1.20",
     "ndarray": "^1.0.18",
     "pako": "^1.0.3",
+    "pathfinding": "^0.4.18",
     "raw-loader": "^0.5.1",
     "ray-aabb": "^3.0.2",
     "react": "^15.3.1",
