--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-dom": "^15.3.1",
     "react-tap-event-plugin": "^1.0.0",
     "stats.js": "^0.16.0",
+    "tether": "^1.3.7",
     "voxel-bedrock": "^1.0.1",
     "voxel-engine-stackgl": "^2.0.0",
     "voxel-flatland": "^0.1.1"
