--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
     "bluebird": "^3.4.5",
     "classnames": "^2.2.5",
     "cwise": "^1.0.9",
+    "geo-3d-box": "^2.0.2",
+    "gl-geometry": "^3.1.1",
+    "gl-shader": "^4.2.1",
     "jszip": "^3.1.2",
     "material-ui": "^0.15.4",
     "msgpack-lite": "^0.1.20",
