--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "worker-loader": "^0.7.1"
   },
   "dependencies": {
+    "@types/dat-gui": "^0.5.29",
     "axios": "^0.14.0",
     "babel-core": "^6.14.0",
     "babel-polyfill": "^6.13.0",
@@ -65,6 +66,7 @@
     "bluebird": "^3.4.5",
     "classnames": "^2.2.5",
     "cwise": "^1.0.9",
+    "dat.gui": "github:dataarts/dat.gui#v0.6.0",
     "geo-3d-box": "^2.0.2",
     "gl-geometry": "^3.1.1",
     "gl-shader": "^4.2.1",
