--- a/package.json
+++ b/package.json
@@ -2,6 +2,49 @@
   "name": "build-a-farm",
   "version": "0.0.1",
   "private": true,
+  "dependencies": {
+    "@types/classnames": "0.0.31",
+    "@types/dat-gui": "^0.5.29",
+    "@types/gl-matrix": "^2.2.32",
+    "@types/gl-matrix-types": "github:pawsong/gl-matrix-types",
+    "@types/jszip": "0.0.31",
+    "@types/material-ui": "^0.15.37",
+    "@types/pako": "^0.2.31",
+    "@types/pathfinding": "0.0.2",
+    "@types/react": "^0.14.41",
+    "@types/react-dom": "^0.14.18",
+    "@types/stats": "^0.16.30",
+    "@types/tether": "^1.1.27",
+    "axios": "^0.14.0",
+    "babel-core": "^6.14.0",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-standalone": "^6.15.0",
+    "bluebird": "^3.4.5",
+    "classnames": "^2.2.5",
+    "cwise": "^1.0.9",
+    "dat.gui": "github:dataarts/dat.gui#v0.6.0",
+    "geo-3d-box": "^2.0.2",
+    "gl-geometry": "^3.1.1",
+    "gl-shader": "^4.2.1",
+    "jszip": "^3.1.2",
+    "material-ui": "^0.15.4",
+    "msgpack-lite": "^0.1.20",
+    "ndarray": "^1.0.18",
+    "pako": "^1.0.3",
+    "pathfinding": "^0.4.18",
+    "raw-loader": "^0.5.1",
+    "ray-aabb": "^3.0.2",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-tap-event-plugin": "^1.0.0",
+    "stats.js": "^0.16.0",
+    "tether": "^1.3.7",
+    "voxel-bedrock": "^1.0.1",
+    "voxel-engine-stackgl": "^2.0.0",
+    "voxel-flatland": "^0.1.1"
+  },
   "devDependencies": {
     "autoprefixer": "6.4.0",
     "babel-core": "6.14.0",
@@ -47,45 +90,13 @@
     "source-map-loader": "^0.1.5",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
-    "ts-loader": "^0.8.2",
+    "ts-loader": "^0.9.5",
     "typescript": "^2.0.3",
     "url-loader": "0.5.7",
     "webpack": "1.13.1",
     "webpack-dev-server": "1.14.1",
     "whatwg-fetch": "1.0.0",
     "worker-loader": "^0.7.1"
-  },
-  "dependencies": {
-    "@types/dat-gui": "^0.5.29",
-    "axios": "^0.14.0",
-    "babel-core": "^6.14.0",
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-standalone": "^6.15.0",
-    "bluebird": "^3.4.5",
-    "classnames": "^2.2.5",
-    "cwise": "^1.0.9",
-    "dat.gui": "github:dataarts/dat.gui#v0.6.0",
-    "geo-3d-box": "^2.0.2",
-    "gl-geometry": "^3.1.1",
-    "gl-shader": "^4.2.1",
-    "jszip": "^3.1.2",
-    "material-ui": "^0.15.4",
-    "msgpack-lite": "^0.1.20",
-    "ndarray": "^1.0.18",
-    "pako": "^1.0.3",
-    "pathfinding": "^0.4.18",
-    "raw-loader": "^0.5.1",
-    "ray-aabb": "^3.0.2",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-tap-event-plugin": "^1.0.0",
-    "stats.js": "^0.16.0",
-    "tether": "^1.3.7",
-    "voxel-bedrock": "^1.0.1",
-    "voxel-engine-stackgl": "^2.0.0",
-    "voxel-flatland": "^0.1.1"
   },
   "scripts": {
     "start": "node ./scripts/start.js",
