--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,7 @@
     "jsx": "preserve",
     "allowSyntheticDefaultImports": true
   },
-  "files": [
-    "src/index.tsx",
-    "src/global.d.ts",
-    "src/vm/worker/index.ts",
-    "typings/index.d.ts"
+  "includes": [
+    "src/**/*"
   ]
 }
