--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "build-a-farm",
   "version": "0.0.1",
   "private": true,
+  "homepage": "https://pawsong.github.io/build-a-farm/",
   "dependencies": {
     "@types/classnames": "0.0.31",
     "@types/dat-gui": "^0.5.29",
     "@types/gl-matrix": "^2.2.32",
-    "@types/gl-matrix-types": "github:pawsong/gl-matrix-types",
+    "@types/gl-matrix-types": "github:voxeline/gl-matrix-types",
     "@types/jszip": "0.0.31",
     "@types/material-ui": "^0.15.37",
     "@types/pako": "^0.2.31",
@@ -16,22 +17,19 @@
     "@types/stats": "^0.16.30",
     "@types/tether": "^1.1.27",
     "axios": "^0.14.0",
-    "babel-core": "^6.14.0",
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-standalone": "^6.15.0",
     "bluebird": "^3.4.5",
     "classnames": "^2.2.5",
     "cwise": "^1.0.9",
     "dat.gui": "github:dataarts/dat.gui#v0.6.0",
     "geo-3d-box": "^2.0.2",
     "gl-geometry": "^3.1.1",
+    "gl-matrix": "^2.3.2",
     "gl-shader": "^4.2.1",
     "jszip": "^3.1.2",
     "material-ui": "^0.15.4",
     "msgpack-lite": "^0.1.20",
     "ndarray": "^1.0.18",
+    "ndarray-ops-typed": "^0.1.3",
     "pako": "^1.0.3",
     "pathfinding": "^0.4.18",
     "raw-loader": "^0.5.1",
@@ -40,13 +38,11 @@
     "react-dom": "^15.3.2",
     "react-tap-event-plugin": "^1.0.0",
     "stats.js": "^0.16.0",
-    "tether": "^1.3.7",
-    "voxel-bedrock": "^1.0.1",
-    "voxel-engine-stackgl": "^2.0.0",
-    "voxel-flatland": "^0.1.1"
+    "tether": "^1.3.7"
   },
   "devDependencies": {
     "autoprefixer": "6.4.0",
+    "awesome-typescript-loader": "^2.2.4",
     "babel-core": "6.14.0",
     "babel-eslint": "6.1.2",
     "babel-loader": "6.2.5",
@@ -74,6 +70,7 @@
     "file-loader": "0.9.0",
     "filesize": "3.3.0",
     "fs-extra": "0.30.0",
+    "gh-pages": "^0.11.0",
     "glslify-loader": "pawsong/glslify-loader",
     "gzip-size": "3.0.0",
     "html-webpack-plugin": "2.22.0",
@@ -100,7 +97,8 @@
   },
   "scripts": {
     "start": "node ./scripts/start.js",
-    "build": "node ./scripts/build.js"
+    "build": "node ./scripts/build.js",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "./config/eslint.js"
