Update build scripts

--- a/package.json
+++ b/package.json
@@ -2,22 +2,23 @@
   "name": "build-a-farm",
   "version": "0.0.1",
   "private": true,
-  "homepage": "https://pawsong.github.io/build-a-farm/",
   "dependencies": {
+    "@types/axios": "^0.9.32",
     "@types/classnames": "0.0.31",
     "@types/dat-gui": "^0.5.29",
     "@types/gl-matrix": "^2.2.32",
     "@types/gl-matrix-types": "github:voxeline/gl-matrix-types",
     "@types/jszip": "0.0.31",
     "@types/material-ui": "^0.15.37",
+    "@types/ndarray-types": "github:voxeline/ndarray-types",
+    "@types/node": "^6.0.45",
     "@types/pako": "^0.2.31",
     "@types/pathfinding": "0.0.2",
     "@types/react": "^0.14.41",
     "@types/react-dom": "^0.14.18",
     "@types/stats": "^0.16.30",
     "@types/tether": "^1.1.27",
-    "axios": "^0.14.0",
-    "bluebird": "^3.4.5",
+    "axios": "^0.15.2",
     "classnames": "^2.2.5",
     "cwise": "^1.0.9",
     "dat.gui": "github:dataarts/dat.gui#v0.6.0",
@@ -25,14 +26,14 @@
     "gl-geometry": "^3.1.1",
     "gl-matrix": "^2.3.2",
     "gl-shader": "^4.2.1",
-    "jszip": "^3.1.2",
-    "material-ui": "^0.15.4",
-    "msgpack-lite": "^0.1.20",
+    "js-interp": "^0.1.0",
+    "jszip": "^3.1.3",
+    "material-ui": "^0.16.1",
+    "msgpack-lite": "^0.1.26",
     "ndarray": "^1.0.18",
     "ndarray-ops-typed": "^0.1.3",
     "pako": "^1.0.3",
     "pathfinding": "^0.4.18",
-    "raw-loader": "^0.5.1",
     "ray-aabb": "^3.0.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
@@ -41,66 +42,90 @@
     "tether": "^1.3.7"
   },
   "devDependencies": {
-    "autoprefixer": "6.4.0",
-    "awesome-typescript-loader": "^2.2.4",
-    "babel-core": "6.14.0",
-    "babel-eslint": "6.1.2",
+    "autoprefixer": "6.5.1",
+    "babel-core": "6.17.0",
+    "babel-eslint": "7.0.0",
+    "babel-jest": "16.0.0",
     "babel-loader": "6.2.5",
-    "babel-plugin-transform-class-properties": "6.11.5",
-    "babel-plugin-transform-object-rest-spread": "6.8.0",
-    "babel-plugin-transform-react-constant-elements": "6.9.1",
-    "babel-plugin-transform-regenerator": "6.14.0",
-    "babel-plugin-transform-runtime": "6.12.0",
-    "babel-preset-latest": "6.14.0",
-    "babel-preset-react": "6.11.1",
-    "babel-runtime": "6.11.6",
-    "case-sensitive-paths-webpack-plugin": "1.1.3",
+    "babel-preset-react-app": "^1.0.0",
+    "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
-    "cross-spawn": "4.0.0",
-    "css-loader": "0.23.1",
-    "detect-port": "1.0.0",
-    "eslint": "3.1.1",
-    "eslint-loader": "1.4.1",
-    "eslint-plugin-flowtype": "2.4.0",
-    "eslint-plugin-import": "1.12.0",
-    "eslint-plugin-jsx-a11y": "2.0.1",
-    "eslint-plugin-react": "5.2.2",
+    "cross-spawn": "4.0.2",
+    "css-loader": "0.25.0",
+    "detect-port": "1.0.1",
+    "dotenv": "2.0.0",
+    "eslint": "3.8.1",
+    "eslint-config-react-app": "^0.3.0",
+    "eslint-loader": "1.6.0",
+    "eslint-plugin-flowtype": "2.21.0",
+    "eslint-plugin-import": "2.0.1",
+    "eslint-plugin-jsx-a11y": "2.2.3",
+    "eslint-plugin-react": "6.4.1",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
     "filesize": "3.3.0",
+    "find-cache-dir": "0.1.1",
     "fs-extra": "0.30.0",
     "gh-pages": "^0.11.0",
-    "glslify-loader": "pawsong/glslify-loader",
+    "glslify-loader": "github:pawsong/glslify-loader",
     "gzip-size": "3.0.0",
-    "html-webpack-plugin": "2.22.0",
-    "http-proxy-middleware": "0.17.0",
+    "html-webpack-plugin": "2.24.0",
+    "http-proxy-middleware": "0.17.2",
+    "jest": "16.0.2",
     "json-loader": "0.5.4",
     "object-assign": "4.1.0",
-    "opn": "4.0.2",
-    "postcss-loader": "0.9.1",
+    "path-exists": "2.1.0",
+    "postcss-loader": "1.0.0",
     "promise": "7.1.1",
     "raw-loader": "^0.5.1",
-    "recursive-readdir": "2.0.0",
+    "react-dev-utils": "^0.3.0",
+    "recursive-readdir": "2.1.0",
     "rimraf": "2.5.4",
     "script-loader": "^0.7.0",
-    "source-map-loader": "^0.1.5",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
     "ts-loader": "^0.9.5",
     "typescript": "^2.0.3",
     "url-loader": "0.5.7",
-    "webpack": "1.13.1",
-    "webpack-dev-server": "1.14.1",
+    "webpack": "1.13.2",
+    "webpack-combine-loaders": "^2.0.0",
+    "webpack-dev-server": "1.16.2",
+    "webpack-manifest-plugin": "1.1.0",
     "whatwg-fetch": "1.0.0",
     "worker-loader": "^0.7.1"
   },
   "scripts": {
-    "start": "node ./scripts/start.js",
-    "build": "node ./scripts/build.js",
-    "deploy": "gh-pages -d build"
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "test": "node scripts/test.js --env=jsdom",
+    "deploy": "npm run build && npm run gh-pages",
+    "gh-pages": "gh-pages -d build"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "jsx",
+      "js",
+      "json"
+    ],
+    "moduleNameMapper": {
+      "^.+\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/config/jest/FileStub.js",
+      "^.+\\.css$": "<rootDir>/config/jest/CSSStub.js"
+    },
+    "setupFiles": [
+      "<rootDir>/config/polyfills.js"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/(build|docs|node_modules)/"
+    ],
+    "testEnvironment": "node"
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
   },
   "eslintConfig": {
-    "extends": "./config/eslint.js"
+    "extends": "react-app"
   }
 }
