--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 # dependencies
 node_modules
 
-# type definitions
-typings
+# testing
+coverage
 
 # production
 lib
@@ -12,6 +12,7 @@ build
 
 # misc
 .DS_Store
+.env
 npm-debug.log
 
 .vscode
