--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "recursive-readdir": "2.1.0",
     "rimraf": "2.5.4",
     "script-loader": "^0.7.0",
+    "source-map-loader": "^0.1.5",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
     "ts-loader": "^0.9.5",
