--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "cwise": "^1.0.9",
     "dat.gui": "github:dataarts/dat.gui#v0.6.0",
     "geo-3d-box": "^2.0.2",
+    "gl-buffer": "^2.1.2",
     "gl-geometry": "^3.1.1",
     "gl-matrix": "^2.3.2",
     "gl-shader": "^4.2.1",
+    "gl-vao": "^1.3.0",
     "js-interp": "^0.1.0",
     "jszip": "^3.1.3",
     "material-ui": "^0.16.1",
